--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -9,7 +9,6 @@ body {
     width: 100%;
 }
 
-
 img {
     border-radius: 10px;
 }
@@ -22,10 +21,12 @@ img {
     width: 100%;
     margin-bottom: 73px;
     position: relative;
+    padding: 0px;
 
 }
 #gridDiv {
     position: relative;
+    margin: 0px;
 }
 .divCard {
     display: inline-block;
@@ -62,7 +63,8 @@ img {
 .container-fluid {
     margin-bottom: 100px;
     position: relative;
-    min-height: 100vh;
+    /* min-height: 100vh; */
+    padding: 0px;
 }
 @media only screen and (min-width: 200px) and (max-width: 960px) {
     #gridDiv {
