--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -31,12 +31,12 @@ img {
 .divCard {
     display: inline-block;
     position: relative;
-    border: 3px solid darkcyan;
+    border: 1px solid darkcyan;
     border-radius: 15px;
-    margin: 5px;
+    margin: 1px;
     cursor: pointer;
     text-align: center;
-    width: 20%;
+    /* width: 20%; */
 }
 .imgFront {
     width: 100%;
