--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -71,10 +71,8 @@ img {
         width: 100%;
     }
 }
-/* @media only screen and (min-width: 960px) {
-    #gridDiv {
-        width: 90%;
-    }
+/* @media only screen and (max-width: 768px) {
+    
 } */
 #welcome {  
     background-image: "url('images/background.png')"; 
