--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -27,6 +27,7 @@
     z-index:10;
     background:inherit;
     overflow: hidden;
+    margin: 0;
 }
 ul li {
     list-style-type: none;
@@ -48,7 +49,7 @@ body {
     padding: 0;
 }
 #intro_text {
-    color: #57DDFF;
+    color: yellow;
     font-size: 22px;
     margin: 0;
 }
@@ -63,10 +64,10 @@ body {
 
 @media only screen and (min-width: 200px) and (max-width: 768px) {
     #intro_name {
-        font-size: 60px;
+        font-size: 65px;
     }
     #front_title {
-        font-size: 25px;
+        font-size: 30px;
     }
     #intro_text {
         font-size: 17px;
