--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -38,10 +38,10 @@ body {
 }
 
 #nav {
-    z-index:10;
+    position: relative;
+    z-index: 1;
     background:inherit;
-    overflow: hidden;
-    margin: 0;
+    overflow: auto;
 }
 
 #nav a {
